--- a/movicun2014/css/estilos.css
+++ b/movicun2014/css/estilos.css
@@ -105,6 +105,7 @@ nav ul li a
 {
 	list-style-type:none;
  	width: 55%;
+ 	height: 200px;
 	cursor: pointer;
 	border: 2px solid red;
  }
@@ -113,7 +114,6 @@ nav ul li a
 	width:100%;
 	border-radius: 10px;
 	border: 1px solid yellow;
-	top: 0;
 }
  .roundabout-in-focus .rota
  {
