--- a/movicun2014/css/estilos.css
+++ b/movicun2014/css/estilos.css
@@ -62,7 +62,7 @@ nav ul li a
 	width: 100%;
 	margin: 0;
 }
-#social1 .social
+#social1 .youtube
 {
 	width: 50px;
 	position: absolute;
@@ -70,7 +70,7 @@ nav ul li a
 	left: 0;
 	margin: 20px 0 0px 70px;
 }
-#social1 .socia
+#social1 .facebook
 {
 	width: 50px;
 	position: absolute;
