--- a/movicun2014/css/estilos.css
+++ b/movicun2014/css/estilos.css
@@ -123,7 +123,17 @@ nav ul li a
 {
 	display: none;	
 }
-
+#info
+{
+	max-width: 960px;
+	margin: 0 auto;
+}
+#info img
+{
+	width: 90%;
+	max-width: 340px;
+	display: inline-block;
+}
 .roundabout-holder 
 {
 	width: 95%;
@@ -220,6 +230,26 @@ nav ul li a
 		top: 0;
 		left: 0;
 		display: block;
+	}
+	#social2 .youtube
+	{
+		width: 28px;
+		position: absolute;
+		top: 0;
+		left: 0;
+		margin: 13px 0 0px 40px;
+	}
+	#social2 .facebook
+	{
+		width: 28px;
+		position: absolute;
+		top: 0;
+		right:0;
+		margin: 13px 40px 20px 0px;
+	}
+	#social2 img
+	{
+		width: 100%;
 	}
 	.roundabout-moveable-item 
 	{
