--- a/movicun2014/css/estilos.css
+++ b/movicun2014/css/estilos.css
@@ -29,7 +29,7 @@ h3
 {
 	font-size: 4.5em;
 	font-weight: bold;
-	margin: 30px 0 10px 0;
+	margin: 60px 0 10px 0;
 	padding: 0;
 }
 h4
@@ -228,7 +228,10 @@ nav ul li a
  }
  @media screen and (min-width: 768px)
  {
- 
+ 	h3
+ 	{
+ 		margin-top: .5em;
+ 	}
  	#movil
  	{
  		display: none;
