--- a/movicun2014/css/estilos.css
+++ b/movicun2014/css/estilos.css
@@ -90,6 +90,7 @@ nav ul li a
 	font-size: 1.2em;
 	background: url(../img/vineta.png)no-repeat;
 	padding-left: 20px;
+	margin-bottom: 40px
 }
 iframe 
 {
