--- a/movicun2014/css/estilos.css
+++ b/movicun2014/css/estilos.css
@@ -106,7 +106,8 @@ nav ul li a
 	font-size: 1.2em;
 	background: url(../img/vineta.png)no-repeat;
 	padding-left: 20px;
-	margin-bottom: 40px
+	max-width:500px;
+	margin:40px  auto;
 }
 iframe 
 {
@@ -196,6 +197,14 @@ iframe
 	margin: 0;
 	padding: 0;
 }
+#precios img
+{
+	max-width: 100%;
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+}
+
 #beneficios
 {
 	background: url(../img/monedas.png)no-repeat;
