--- a/movicun2014/css/estilos.css
+++ b/movicun2014/css/estilos.css
@@ -42,6 +42,17 @@ h5
 {
 	padding: 20px;
 }
+#contacto ul li
+{
+	list-style-type: none;
+	padding: 10px;
+	margin: 0 auto;
+}
+ul
+{
+	margin: 0;
+	padding: 0;
+}
 nav ul
 {
 	margin: 0;
@@ -62,6 +73,14 @@ nav ul li a
 	color: black;
 	font-size: 18px;
 }
+textarea
+{
+	width: 100%;
+	max-width: 400px;
+	height: 300px;
+	background: rgba(169, 169, 169,.3);
+	padding-left: 10px;
+}
 #barrasuperior
 {
 	height: 75px;
@@ -80,8 +99,8 @@ nav ul li a
 {
 	width: 100%;
 	max-width: 800px;
-	padding: 0 1em;
-	margin-top: 50px;
+	padding:0;
+	margin:50px auto 0 auto;
 }
 .comousar2
 {
@@ -214,6 +233,23 @@ iframe
 	max-width: 800px;
 	margin: 0 auto;
 	padding: 0 1em;
+}
+#contacto
+{
+	width: 90%;
+	max-width: 800px;
+	margin: 0 auto;
+	padding: 0 1em;
+}
+#contacto input
+{
+	background: rgba(204,204,204,.3);
+	box-shadow: 0px 1px 10px black inset;
+	border-radius: 5px;
+	width: 100%;
+	padding-left: 10px;
+	max-width: 400px;
+	height: 33px;
 }
 .oculta
 {
