--- a/inquidiox/css/index.css
+++ b/inquidiox/css/index.css
@@ -43,8 +43,9 @@ nav ul li a
 }
 #inicio
 {
-	background:url(../img/fondoagua.jpg);
-	background-size: 100%;
+	background:url(../img/fondoagua.jpg)repeat-x;
+	background-size: 100% 100%;
+
 }
 #inicio img
 {
@@ -109,6 +110,10 @@ nav ul li a
 {
 	margin: 0;
 	padding: 0;
+	background: #ff2323;
+	width: 95%;
+	max-width: 400px;
+	margin: 0 auto;
 }
 #contacto li
 {
@@ -116,9 +121,8 @@ nav ul li a
 	max-width: 300px;
 	text-align: center;
 	margin: 0 auto;
-	font-size: 20px;
+	font-size: 22px;
 	padding: .2em;
-	color: black;
 	list-style-type: none;
 }
 #contacto input
@@ -126,6 +130,16 @@ nav ul li a
 	width: 100%;
 	height: 30px;
 	margin-bottom: 1em;
+}
+#contacto form ,iframe
+{
+	display: inline-block;
+	vertical-align: top;
+}
+#contacto iframe
+{
+	width: 100%;
+	max-width: 400px;
 }
 footer
 {
